# Cohen3

./: .buildinfo  .coveragerc  .gitignore  .noserc  .pylintrc  .travis.yml  CHANGELOG.rst  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  Dockerfile  LICENCE  MANIFEST.in  Pipfile  README.rst  backends.html  changelog.html  cli.html  codecov.yml  contributing.html  contributor_code_of_conduct.html  contributor_guidelines.html  contributor_setup.html  contributor_types.html  events.html  example_backend_the_new_way.html  example_backend_the_old_way.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  write_a_backend.html
.doctrees/: backends.doctree  changelog.doctree  cli.doctree  contributing.doctree  contributor_code_of_conduct.doctree  contributor_guidelines.doctree  contributor_setup.doctree  contributor_types.doctree  environment.pickle  events.doctree  example_backend_the_new_way.doctree  example_backend_the_old_way.doctree  index.doctree  install.doctree  write_a_backend.doctree
.doctrees/source/: coherence.backends.doctree  coherence.doctree  coherence.extern.doctree  coherence.upnp.doctree  coherence.web.doctree  modules.doctree
.doctrees/source/backends/: ampache.doctree  appletrailers.doctree  audiocd.doctree  axiscam.doctree  banshee.doctree  bbc.doctree  buzztard.doctree  dvbd.doctree  elisarenderer.doctree  elisastorage.doctree  feed.doctree  flickr.doctree  fs.doctree  gallery2.doctree  gstreamer_renderer.doctree  iradio.doctree  itv.doctree  lastfm.doctree  lolcats.doctree  mediadb.doctree  miroguide.doctree  picasa.doctree  playlist.doctree  radiotime.doctree  swr3.doctree  ted.doctree  test.doctree  tracker.doctree  twitch.doctree  yamj.doctree  youtube.doctree
.github/workflows/: publish.yml  push.yml
_modules/: index.html
_modules/coherence/: backend.html  base.html  json_service.html  log.html  transcoder.html
_modules/coherence/backends/: ampache_storage.html  appletrailers_storage.html  audiocd_storage.html  axiscam_storage.html  banshee_storage.html  bbc_storage.html  buzztard_control.html  elisa_renderer.html  elisa_storage.html  feed_storage.html  fs_storage.html  iradio_storage.html  itv_storage.html  lastfm_storage.html  lolcats_storage.html  miroguide_storage.html  picasa_storage.html  playlist_storage.html  radiotime_storage.html  swr3_storage.html  ted_storage.html  test_storage.html  twitch_storage.html  yamj_storage.html  youtube_storage.html
_modules/coherence/web/: ui.html
_modules/twisted/web/: proxy.html  template.html
_sources/: changelog.rst.txt  contributor_guidelines.rst.txt  contributor_types.rst.txt  events.rst.txt  example_backend_the_new_way.rst.txt  example_backend_the_old_way.rst.txt  index.rst.txt
_sources/source/: coherence.backends.rst.txt  coherence.upnp.rst.txt  modules.rst.txt
_sources/source/backends/: appletrailers.rst.txt  dvbd.rst.txt  elisarenderer.rst.txt  flickr.rst.txt  fs.rst.txt  iradio.rst.txt  itv.rst.txt  lastfm.rst.txt  lolcats.rst.txt  miroguide.rst.txt  picasa.rst.txt  playlist.rst.txt  radiotime.rst.txt  swr3.rst.txt  test.rst.txt  twitch.rst.txt  yamj.rst.txt  youtube.rst.txt
coherence/: __init__.py  backend.py  base.py  cli.py  dbus_constants.py  dbus_service.py  dispatcher.py  json_service.py  log.py  transcoder.py  tube_service.py
coherence/backends/: ampache_storage.py  appletrailers_storage.py  audiocd_storage.py  axiscam_storage.py  banshee_storage.py  bbc_storage.py  buzztard_control.py  dvbd_storage.py  elisa_renderer.py  elisa_storage.py  feed_storage.py  flickr_storage.py  fs_storage.py  gallery2_storage.py  gstreamer_renderer.py  iradio_storage.py  itv_storage.py  lastfm_storage.py  lolcats_storage.py  mediadb_storage.py  miroguide_storage.py  picasa_storage.py  playlist_storage.py  radiotime_storage.py  swr3_storage.py  ted_storage.py  test_storage.py  tracker_storage.py  twitch_storage.py  yamj_storage.py  youtube_storage.py
coherence/backends/models/: containers.py  items.py  stores.py
coherence/upnp/core/: DIDLLite.py  action.py  device.py  dlna.py  event.py  msearch.py  service.py  soap_lite.py  soap_proxy.py  soap_service.py  ssdp.py  utils.py  uuid.py  (+2 more)
coherence/web/: ui.py
docs/: Makefile  backends.rst  changelog.rst  cli.rst  cohen.conf.example  conf.py  contributing.rst  contributor_code_of_conduct.rst  contributor_guidelines.rst  contributor_setup.rst  example_backend_the_new_way.rst  example_backend_the_old_way.rst  ext_github.py  index.rst  install.rst  write_a_backend.rst
docs/backend/: backend_twitch.rst
docs/source/: coherence.backends.models.rst  coherence.backends.rst  coherence.extern.galleryremote.rst  coherence.extern.rst  coherence.extern.youtubedl.rst  coherence.rst  coherence.upnp.core.rst  coherence.upnp.devices.rst  coherence.upnp.rst  coherence.upnp.services.clients.rst  coherence.upnp.services.rst  coherence.upnp.services.servers.rst  coherence.web.rst  modules.rst
misc/: cohen-initscript.sh  cohen3-initscript.sh  cohen3.conf.example  media_server_observer.py  upnp-tester.py
source/: coherence.backends.html  coherence.extern.html  coherence.html  coherence.upnp.html  coherence.web.html  modules.html
source/backends/: ampache.html  appletrailers.html  audiocd.html  axiscam.html  banshee.html  bbc.html  buzztard.html  dvbd.html  elisarenderer.html  elisastorage.html  feed.html  flickr.html  fs.html  gallery2.html  gstreamer_renderer.html  iradio.html  itv.html  lastfm.html  lolcats.html  mediadb.html  miroguide.html  picasa.html  playlist.html  radiotime.html  swr3.html  ted.html  test.html  tracker.html  twitch.html  yamj.html  youtube.html
tests/: __init__.py  conftest.py  content_directory.json  rpc_client.py  test_base.py  test_dbus.py  test_dispatching.py  test_transcoder.py  test_web_ui.py  web_utils.py
tests/backends/: __init__.py  test_ampache_storage.py  test_fs_storage.py  test_mediadb_storage.py  test_playlist_storage.py
tests/content/: README.md
tests/upnp/: test_content_directory_server.py  test_switch_power_client.py
(+235 files in other folders)
